; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23885-417.c_bb_buf_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23885-417.c_bb_buf_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.videobuf_queue = type { %struct.cx23885_fh* }
%struct.cx23885_fh = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.videobuf_buffer = type { i32 }
%struct.cx23885_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.videobuf_queue*, %struct.videobuf_buffer*)* @bb_buf_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bb_buf_queue(%struct.videobuf_queue* %0, %struct.videobuf_buffer* %1) #0 {
  %3 = alloca %struct.videobuf_queue*, align 8
  %4 = alloca %struct.videobuf_buffer*, align 8
  %5 = alloca %struct.cx23885_fh*, align 8
  store %struct.videobuf_queue* %0, %struct.videobuf_queue** %3, align 8
  store %struct.videobuf_buffer* %1, %struct.videobuf_buffer** %4, align 8
  %6 = load %struct.videobuf_queue*, %struct.videobuf_queue** %3, align 8
  %7 = getelementptr inbounds %struct.videobuf_queue, %struct.videobuf_queue* %6, i32 0, i32 0
  %8 = load %struct.cx23885_fh*, %struct.cx23885_fh** %7, align 8
  store %struct.cx23885_fh* %8, %struct.cx23885_fh** %5, align 8
  %9 = load %struct.cx23885_fh*, %struct.cx23885_fh** %5, align 8
  %10 = getelementptr inbounds %struct.cx23885_fh, %struct.cx23885_fh* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %14 = bitcast %struct.videobuf_buffer* %13 to %struct.cx23885_buffer*
  %15 = call i32 @cx23885_buf_queue(i32* %12, %struct.cx23885_buffer* %14)
  ret void
}

declare dso_local i32 @cx23885_buf_queue(i32*, %struct.cx23885_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
